--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
   </header>
 
   <!--- end of header --->
+    <!-- In the header I have used class in order for me to be able to attempt 
+    creating a navbar however I believe I didnt write my code properly so I dont think 
+    I got it right but I also used the class to add my social media pages and added the 
+    icons using 
 
   <!--- main content--->
   <main style="background-color: white;">
